--- a/Practice/02Lec.html
+++ b/Practice/02Lec.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>02 Lecture</title>
+    <title>02 Lecture (07-02-23)</title>
 
     <!-- CSS Link Here -->
     <style>
@@ -23,5 +23,104 @@
 <!-- JavaScript Link Here -->
 <script>
 
+    // Data :- Raw facts : Smallest entity of any information collection of data - Information.
+
+    // * variable :- let, var, const.
+
+    // * Data Types :-
+
+        // (1) Number
+        // (2) String
+        // (3) Boolean
+        // (4) BigInt
+        // (5) null
+        // (6) undefined
+        // (7) Object
+
+
+    // * Operators :-
+
+                // Operands + Operator : Expression.
+                // x + y = z
+                // x, y, z = operands.
+                // +, = Operator.
+
+
+
+
+        // (1) Number :-
+
+                    // let x = 33.33;
+                    // console.log(typeof(x));
+
+                    // let x = 33.33;
+                    // console.log(x);
+
+
+        // (2) String :-   
+
+                    // var a = "20"
+                    // a ="20";
+                    // console.log(a);
+                    // console.log(typeof(a));
+
+
+        // (3) Boolean :-
+                    
+                    //  let a = 10;
+                    //  let b = 10;
+                    //  let c = 5;
+                    //  console.log(a == b);                  // true              //  (==) value check
+                    //  console.log(typeof(a == b));                              //  boolean
+                    //  console.log(b == c);                // false
+                    //  console.log(a === b);              // true              // (===)   check value and type
+                    //  console.log(b === c);             // false
+
+
+        // (4) BigInt :-
+
+                    // let x = 123456789101112131415161718n;                   // n = BigInt means game aetla number hoy batavi dye.
+                    // console.log(typeof(x));
+                    // console.log(x);
+
+                    // let x = 256n;                                               //n = BigInt.
+                    // console.log(typeof(x));
+
+
+
+        // (5) Null :-
+
+                    // let x = null;
+                    // console.log(typeof(x));                                    // typeof(x) = Object.
+                    // console.log(x);                                            // x = null.
+
+
+
+        // (6) undefined :- 
+
+                    // let x;
+                    // console.log(x);
+
+
+
+        // (7) Object :-
+
+                    // let x = Object;                                                 // function.
+                    // let x = null;                                                    // Object.
+                    // console.log(typeof(x));
+
+
+
+
+                    let arr = ['apple','mango','badam'];
+                    // console.log(typeof(arr));
+                    console.log(arr);
+
+                    // const arr = {
+                    //     'A' : 'Bhanvad',
+                    //     'B' : 'Dwarka',
+                    // }
+                    // console.log(arr);
+                    // console.log(typeof(arr));                                       // Object.
 </script>
 
