--- a/Practice/01Lec.html
+++ b/Practice/01Lec.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>01 Lecture</title>
+    <title>01 Lecture (04-02-23)</title>
 
 
     <!-- CSS Link Start Here -->
