--- a/Practice/06Lec.html
+++ b/Practice/06Lec.html
@@ -1,21 +1,262 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>06 Lecture (16-02-23)</title>
+    <title>06 Lecture (16-02-23) Animation & Transition.</title>
 
 
-        <!-- Concept :- 1 -->
+    <!-- Concept :- 1 -->
 
-    <style>
+    <!-- <style>
+        h1{
+            color: white;
+            text-align: center;
+        }
         body{
             background: black;
         }
+        .box{
+            margin: 0 auto;
+            background: #fff;
+            height: 250px;
+            width: 250px;
+            position: relative;
+            animation-name: king;
+            animation-duration: 5s;
+        }
+        @keyframes king{
+            0% {background-color: white;}
+            25% {background-color: red;}
+            50% {background-color: green;}
+            75% {background-color: orangered;}
+            100% {background-color: blue;}
+        }
+    </style> -->
+
+
+
+    <!-- Concept :- 2 -->
+
+    <!-- <style>
+        h1 {
+            color: white;
+            text-align: center;
+        }
+
+        body {
+            background: black;
+        }
+
+        .box {
+            margin: 0 auto;
+            background: #fff;
+            height: 250px;
+            width: 250px;
+            position: relative;
+            animation-name: king;
+            animation-duration: 5s;
+        }
+        @keyframes king{
+            0% {background-color: white; left: 0; top: 0;}
+            25% {background-color: red; left: 300px; top: 0;}
+            50% {background-color: green; left: 300px; top: 300px;}
+            75% {background-color: orangered; left: 0px; top: 300;}
+            100% {background-color: blue; left: 300px; top: 0px;}
+        }
+    </style> -->
+
+
+
+    <!-- Concept :- 3 -->
+
+    <!-- <style>
+        h1 {
+            color: white;
+            text-align: center;
+        }
+
+        body {
+            background: black;
+        }
+
+        .box {
+            margin: 0 auto;
+            background: #fff;
+            height: 250px;
+            width: 250px;
+            position: relative;
+            animation-name: king;
+            animation-duration: 10s;
+        }
+        @keyframes king{
+            0% {background-color: white; left: 0px; top: 0px; border-radius: 0 0 0 0; border: purple;}
+            25% {background-color: red; left: 300px; top: 0px; border-radius: 50% 0 0 0; border: 10px solid green;}
+            50% {background-color: green; left: 300px; top: 300px; border-radius: 50% 50% 0 0; border: 10px solid red;}
+            75% {background-color: orangered; left: 0px; top: 300px; border-radius: 50% 50% 50% 0px; border: 10px solid blue;}
+            100% {background-color: blue; left: 0px; top: 0px; border-radius: 50% 50% 50% 50%; border: 10px solid palevioletred;}
+        }
+    </style> -->
+
+
+
+
+    <!-- Concept :- 4 -->
+
+    <!-- <style>
+        h1 {
+            color: white;
+            text-align: center;
+        }
+
+        body {
+            background: black;
+        }
+
+        .box {
+            margin: 0 auto;
+            background: #fff;
+            height: 250px;
+            width: 250px;
+            position: relative;
+            animation-name: king;
+            animation-duration: 10s;
+            /* animation-delay: 2s; */
+            animation-timing-function: linear;
+            animation-timing-function: ease-in-out;
+            animation-timing-function: ease-in;
+            animation-timing-function: ease-out;
+            animation-timing-function: ease;
+            animation-fill-mode: forwards;
+            animation-fill-mode: backwards;
+            animation-direction: reverse;
+            animation-direction: alternate-reverse;
+            animation-iteration-count: infinite;
+        }
+
+        @keyframes king{
+            0% {background-color: white; left: 0; top: 0; border-radius: 0 0 0 0;}
+            25% {background-color: red; left: 300px; top: 0; border-radius: 50% 0 0 0;}
+            50% {background-color: green; left: 300px; top: 300px; border-radius: 50% 50% 0 0;}
+            75% {background-color: orangered; left: 0px; top: 300px; border-radius: 50% 50% 50% 0;}
+            100% {background-color: blue; left: 0px; top: 0px; border-radius: 50% 50% 50% 50%;}
+        }
+    </style> -->
+
+
+
+
+
+
+
+
+
+
+    <!-- * Transition in CSS. -->
+
+    <!-- Concept :- 1 -->
+
+    <!-- <style>
+        h1 {
+            color: red;
+            text-align: center;
+        }
+
+        body {
+            background-color: #333;
+        }
+        .box{
+            margin: auto;
+            height: 250px;
+            width: 250px;
+            background-color: white;
+            position: relative;
+            top: 150px;
+            transition-property: background;
+            transition-duration: 2s;
+        }
+        .box:hover{
+            background-color: red;
+        }   
+    </style> -->
+
+
+
+
+    <!-- Concept :- 2 -->
+
+    <!-- <style>
+        h1 {
+            color: red;
+            text-align: center;
+        }
+
+        body {
+            background-color: #333;
+        }
+        .box{
+            margin: 0 auto;
+            height: 250px;
+            width: 250px;
+            background: white;
+            position: relative;
+            top: 150px;
+            /* transition-property: background, border-radius; */
+            transition-duration: 2s;
+        }
+        .box:hover{
+            background-color: red;
+            border-radius: 50%;
+        }
+    </style> -->
+
+
+
+
+    <!-- Concept :- 3 -->
+
+    <style>
+        h1 {
+            color: red;
+            text-align: center;
+        }
+
+        body {
+            background-color: #333;
+        }
+
+        .box {
+            margin: 0 auto;
+            height: 250px;
+            width: 250px;
+            background: white;
+            position: relative;
+            top: 150px;
+            /* transition-property: background, border-radius, transform; */
+            transition-property: all;
+            /* transition-duration: 2s(background), 4s(border-radius); */
+            transition-duration: 2s, 4s;
+            transition-delay: 2s;
+            transition-timing-function: linear;
+            transition-timing-function: ease-in;
+        }
+        .box:hover{
+            background-color: red;
+            border-radius: 50%;
+            transform: rotateY(360deg);
+            /* transform: rotateY(180deg); */
+            /* transform: rotateX(180deg); */
+            /* transform: rotateX(360deg); */
+        }
     </style>
 </head>
+
 <body>
+    <!-- <h1>Animation in CSS.</h1> -->
+    <h1>Transition in CSS.</h1>
     <div class="box"></div>
 </body>
+
 </html>
