--- a/Project/07 Lec Grid.html
+++ b/Project/07 Lec Grid.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>01 Grid Project.</title>
+    <title>01 Grid Project (18-02-23)</title>
 
     <style>
         * {
@@ -31,7 +31,14 @@
             background-color: black;
             color: white;
             padding: 10px 0px 10px 10px;
-            /* background: url(../../CSS/Image/vk9.webp) no-repeat center center/cover; */
+            background: url(../../CSS/Image/vk5.webp) no-repeat center center/cover;
+
+            transition-duration: 2s, 4s;
+            transition-delay: 2s;
+        }
+        .one:hover{
+            border-radius: 10%;
+            transform: rotateY(180deg);
         }
 
         .two {
@@ -40,6 +47,14 @@
             background-color: black;
             color: white;
             padding: 10px 0px 10px 10px;
+            background: url(../../CSS/Image/vk7.png) no-repeat center center/cover;
+            transition-property: all;
+            transition-duration: 2s, 5s;
+            transition-delay: 2s;
+        }
+        .two:hover{
+            border-radius: 10%;
+            transform: rotateY(180deg);
         }
 
         .three {
@@ -48,6 +63,15 @@
             background-color: black;
             color: white;
             padding: 10px 0px 10px 10px;
+            background: url(../../CSS/Image/Virat_Kohli_1.webp) no-repeat center center/cover;
+
+            transition-property: all;
+            transition-duration: 2s, 4s;
+            transition-delay: 2s;
+        }
+        .three:hover{
+            border-radius: 10%;
+            transform: rotateY(180deg);
         }
 
         .four {
@@ -56,7 +80,16 @@
             background-color: black;
             color: white;
             padding: 5px 0px 10px 10px;
+            background: url(../../CSS/Image/virat_kohli_2.jpg) no-repeat center center/cover;
+
+            /* transition-property: all;
+            transition-duration: 2s, 4s;
+            transition-delay: 2s; */
         }
+        /* .four:hover{
+            border-radius: 10%;
+            transform: rotateX(180deg);
+        } */
 
         .five {
             grid-column: 2 / 3;
@@ -66,6 +99,15 @@
             color: black;
             padding: 10px 0px 10px 10px;
             margin: 20px 0px 20px 20px;
+            background: url(../../CSS/Image/virat_kohli_3.jpeg) no-repeat center center/cover;
+
+            transition-property: all;
+            transition-duration: 2s, 4s;
+            transition-delay: 2s;
+        }
+        .five:hover{
+            border-radius: 10%;
+            transform: rotateY(180deg);
         }
 
         .six {
@@ -75,6 +117,15 @@
             color: black;
             padding: 10px 0px 10px 10px;
             margin: 20px 10px 0px 0px;
+            background: url(../../CSS/Image/vk4.gif) no-repeat center center/cover;
+
+            transition-property: all;
+            transition-duration: 2s, 4s;
+            transition-delay: 2s;
+        }
+        .six:hover{
+            border-radius: 10%;
+            transform: rotateY(180deg);
         }
 
         .seven {
@@ -84,6 +135,14 @@
             color: black;
             padding: 10px 0px 10px 10px;
             margin: 0px 10px 20px 0px;
+            background: url(../../CSS/Image/vk16.webp) no-repeat center center/cover;
+
+            transition-duration: 2s, 4s;
+            transition-delay: 2s;
+        }
+        .seven:hover{
+            border-radius: 10%;
+            transform: rotateY(180deg);
         }
     </style>
 
