--- a/Practice/03Lec.html
+++ b/Practice/03Lec.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>03 lecture (09-02-23)</title>
 </head>
+
 <body>
 
     <h1>Hello King Kohli</h1>
 
 </body>
+
 </html>
 
 
 
-    <!-- JavaScript Start Here -->
+<!-- JavaScript Start Here -->
 
 
 <script>
@@ -41,66 +44,66 @@
 
     // * Operator :-
 
-            // (1) Arithmetic :-
-                // +, -, *, %, **
+    // (1) Arithmetic :-
+    // +, -, *, %, **
 
 
-            // (2) Relational / comparison :-
-                // >, <, >=, <=, ==, ===, !=, !==
+    // (2) Relational / comparison :-
+    // >, <, >=, <=, ==, ===, !=, !==
 
-                // (==) value chacker.
-                // (===) value and type chacker.
-                // (!=) value and type chack.
-                // (!==) value chack.
-
-
-
-
-
-            // * Decision control structure :-
-
-                // if.
-                // if else.
-                // if else if else.
-
-        // * Example :-
-
-                // (1)
-
-            // let start = "Hello World";
-        //    console.log(typeof(start));                                                    //string.
-        //   console.log(start.toLowerCase());
-        //  console.log(start.toLocaleUpperCase());
-        //   console.log(start.length);
-        //   console.log(start.split(''));
-        // console.log(start.split(' '));
-        // console.log(start.indexOf('W'));
-        // console.log(start.charAt(6));
-        // console.log(start.charAt('6'));
-        // console.log(start.charAt("6"));
-        // console.log(start.match('Hello'));
-        // console.log(start.matchAll('Hello'));                                              // Regulor Expression String Iterator.
-        // console.log(start.endsWith('d'));                                                  // True.
-        // console.log(start.startsWith('H'));                                                // True.
-        // console.log(start.startsWith('v'));                                                // false.
+    // (==) value checker.
+    // (===) value and type checker.
+    // (!=) value and type check.
+    // (!==) value check.
 
 
 
 
-            // (2)
 
-        // let name = "Dk";
-        // let age = 21;
+    // * Decision control structure :-
 
-        // console.log("welcome "+name+" your age is "+age+" years.");
+    // if.
+    // if else.
+    // if else if else.
+
+    // * Example :-
+
+    // (1)
+
+    // let start = "Hello World";
+    //    console.log(typeof(start));                                                    //string.
+    //   console.log(start.toLowerCase());
+    //  console.log(start.toLocaleUpperCase());
+    //   console.log(start.length);
+    //   console.log(start.split(''));
+    // console.log(start.split(' '));
+    // console.log(start.indexOf('W'));
+    // console.log(start.charAt(6));
+    // console.log(start.charAt('6'));
+    // console.log(start.charAt("6"));
+    // console.log(start.match('Hello'));
+    // console.log(start.matchAll('Hello'));                                              // Regulor Expression String Iterator.
+    // console.log(start.endsWith('d'));                                                  // True.
+    // console.log(start.startsWith('H'));                                                // True.
+    // console.log(start.startsWith('v'));                                                // false.
 
 
-            //(3) Template String :-
 
-        let name ="Dk"
-        let age =21;
 
-        console.log(`welcome ${name} your age is ${age} years.`); 
+    // (2)
+
+    // let name = "Dk";
+    // let age = 21;
+
+    // console.log("welcome "+name+" your age is "+age+" years.");
+
+
+    //(3) Template String :-
+
+    let name = "Dk"
+    let age = 21;
+
+    console.log(`welcome ${name} your age is ${age} years.`);
 
         // console.log(name.concat(" your age is ").concat(age).concat(" years."));
 
@@ -127,5 +130,5 @@
 
             // console.log(typeof(null));                                                      // objects.
 
-            
+
 </script>
